MDA-222 - collection properties contracts
https://issues.shibboleth.net/jira/browse/MDA-222